force-app/main/default/objects/GRN__c/GRN__c.object-meta.xml
<CustomObject>
    <label>GRN</label>
    <pluralLabel>GRNs</pluralLabel>
    <nameField>
        <label>GRN Number</label>
        <displayFormat>GRN-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Goods Receipt Note for tracking receipt of dispatched goods against invoices in SFA distribution management</description>
</CustomObject>