force-app/main/default/objects/GRN__c/fields/GRN_Date__c.field-meta.xml
<CustomField>
    <fullName>GRN_Date__c</fullName>
    <label>GRN Date</label>
    <type>Date</type>
</CustomField>