force-app/main/default/objects/GRN__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>GRNs</relationshipLabel>
    <relationshipName>GRNs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>