force-app/main/default/objects/GRN__c/fields/Short_Qty__c.field-meta.xml
<CustomField>
    <fullName>Short_Qty__c</fullName>
    <label>Short Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>